--- a/WebApp/css/style.css
+++ b/WebApp/css/style.css
@@ -11,6 +11,8 @@ ul.off-canvas-list li a {
   background-color: #F9F9F9;
   color: #333;
   border-bottom: 1px solid #ddd;
+  border-left: 1px solid #ddd;
+  min-height: 45px;
 }
 .tab-bar ul li:hover {
   background: none repeat scroll 0% 0% #222325;
@@ -56,7 +58,7 @@ li.logo img {
 
 .burger {
     margin-left: 10px;
-    margin-top: 6px;
+    margin-top: 9px;
     color: #ddd;
 }
 
@@ -78,7 +80,7 @@ img.mainlogo {
 }
 
 i.awicon {
-    margin: 10;
+    margin: 10px;
 }
 
 .number1{
@@ -165,5 +167,11 @@ tr{
 
 td{
   height: 50px;
+}
 
+span.chevron {
+    text-align: right;
+    float: right;
+    margin-right: 10px;
+    margin-top: 13px;
 }
