--- a/WebApp/css/style.css
+++ b/WebApp/css/style.css
@@ -175,3 +175,24 @@ span.chevron {
     margin-right: 10px;
     margin-top: 13px;
 }
+
+iframe { width:100% ;
+  height: -moz-calc(100% - 45px);
+  height: -webkit-calc(100% - 45px);
+  height: calc(100% - 45px);
+  border:none ;
+}
+
+body, html { width:100% ;
+    height:100% ;
+    overflow:hidden ;
+}
+
+html, body, .off-canvas-wrap, .inner-wrap, .main-section
+{
+  height: 100%;
+}
+
+div.chat {
+  height: 100%;
+}
