--- a/WebApp/css/style.css
+++ b/WebApp/css/style.css
@@ -198,3 +198,12 @@ td.destination {
   font-size: 18px;
   text-align: center;
 }
+
+.button-group.stack>li {
+  margin: 10px;
+}
+
+
+.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
+  vertical-align: inherit!important;
+}
