--- a/WebApp/css/style.css
+++ b/WebApp/css/style.css
@@ -207,3 +207,8 @@ td.destination {
 .table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
   vertical-align: inherit!important;
 }
+
+.right-small {
+  border-left: none!important;
+  right: 10px!important;
+}
