--- a/WebApp/css/style.css
+++ b/WebApp/css/style.css
@@ -90,7 +90,7 @@ i.awicon {
   background-color: pink;
   width: 50px;
   height: 50px;
-  border-radius: 5px;
+
 }
 
 .number2{
@@ -100,7 +100,7 @@ i.awicon {
   background-color: lightgreen;
   width: 50px;
   height: 50px;
-  border-radius: 5px;
+
 }
 .number5{
   font-size: 30px;
@@ -109,7 +109,7 @@ i.awicon {
   background-color: orange;
   width: 50px;
   height: 50px;
-  border-radius: 5px;
+
 }
 .number4{
   font-size: 30px;
@@ -118,7 +118,7 @@ i.awicon {
   background-color: lightblue;
   width: 50px;
   height: 50px;
-  border-radius: 5px;
+
 }
 .number3{
   font-size: 30px;
@@ -127,16 +127,21 @@ i.awicon {
   background-color: yellow;
   width: 50px;
   height: 50px;
-  border-radius: 5px;
+
 }
 
 .buttonLine{
   font-weight: bold;
   font-size: 16px;
   background-color: lightgrey;
-
   text-transform: uppercase;
+}
 
+.buttonLine2{
+  font-weight: bold;
+  font-size: 16px;
+  background-color: #fff;
+  text-transform: uppercase;
 }
 .under_buttonLine{
   font-size: 15px;
@@ -179,17 +184,16 @@ iframe { width:100% ;
   height: calc(100% - 45px);
   border:none ;
 }
-
+/*
 body, html { width:100% ;
     height:100% ;
-    overflow:hidden ;
 }
 
 html, body, .off-canvas-wrap, .inner-wrap, .main-section
 {
   height: 100%;
 }
-
+*/
 div.chat {
   height: 100%;
 }
