--- a/WebApp/css/style.css
+++ b/WebApp/css/style.css
@@ -133,7 +133,7 @@ i.awicon {
 .buttonLine{
   font-weight: bold;
   font-size: 16px;
-  background-color: lightgrey;
+  background-color: #ddd;
   text-transform: uppercase;
 }
 
@@ -184,16 +184,7 @@ iframe { width:100% ;
   height: calc(100% - 45px);
   border:none ;
 }
-/*
-body, html { width:100% ;
-    height:100% ;
-}
 
-html, body, .off-canvas-wrap, .inner-wrap, .main-section
-{
-  height: 100%;
-}
-*/
 div.chat {
   height: 100%;
 }
